src/test/ui/privacy/public-instead-of-pub.stderr
error: expected one of `!` or `::`, found keyword `struct`
  --> $DIR/public-instead-of-pub.rs:3:8
   |
LL | public struct MyStruct;
   |        ^^^^^^ expected one of `!` or `::`
   |
help: write `pub` instead of `public` to make the item public
   |
LL | pub struct MyStruct;
   | ~~~

error: aborting due to previous error

